Nav exercise is done

--- a/Nav/nav.html
+++ b/Nav/nav.html
@@ -12,9 +12,9 @@
 <body>
     <nav class="layout">
         <div class="navbar"><a href="http://#"><span class="Navbar">Navbar</span></a></div>
-        <div class="navbar"><a href="http://#"><span>Home</span></a></div>
-        <div class="navbar"><a href="http://#">Link</a></div>
-        <div class="navbar">
+        <div class="navbar hide"><a href="http://#"><span>Home</span></a></div>
+        <div class="navbar hide"><a href="http://#">Link</a></div>
+        <div class="navbar hide">
             <form class="dropdown">
                 <select>
                     <option value="#" class="dropdown">Dropdown</option>
@@ -22,9 +22,9 @@
                 </select>
             </form>
         </div>
-        <div class="navbar"><button class="button" disabled="disabled">Disabled</button></div>
-        <div class="navbar hamburger"><a href="http://#">hamburger</a></div>
-        <div class="navbar form">
+        <div class="navbar hide"><button class="button" disabled="disabled">Disabled</button></div>
+        <div class="navbar hamburger hide"><a href="http://#">hamburger</a></div>
+        <div class="navbar form hide">
             <form>
                 <input type="search" name="#" id="#" placeholder="Search">
                 <button class="search">Search</button>
